--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -75,7 +75,7 @@
                                         <a href=""><i class="fa fa-user-circle ml-lg-3"></i>@email</a>
                                     </div>
                                     <div class="header__top__right__auth">
-                                        <a href="https://localhost:44379/Accounts/Logout"><i class="fa fa-sign-out ml-lg-3"></i>Đăng xuất</a>
+                                        <a asp-action="Logout" asp-controller="Accounts"><i class="fa fa-sign-out ml-lg-3"></i>Đăng xuất</a>
                                         @*<i class="fa fa-sign-out ml-lg-3">@Html.ActionLink("Đăng xuất","Logout", "Accounts")</i>*@
                                     </div>
                                 }
