--- a/Views/Detail/Index.cshtml
+++ b/Views/Detail/Index.cshtml
@@ -12,7 +12,7 @@
 <div class="row">
 
     <div class="col-6 col-md-4">
-        <img src="~/image/@Html.DisplayFor(model => model.ProductImage)" width="100%" height="400px" atl="image" />
+        <img src="@Html.DisplayFor(model => model.ProductImage)" width="100%" height="400px" atl="image" />
     </div>
     <div class="col-12 col-md-8">
         <dl class="row">
@@ -42,11 +42,37 @@
             <br />
 
             <div class="col-sm-4">
-                <a class="btn btn-warning" asp-controller="Cart" asp-action="Index">Thêm vào giỏ hàng</a>
+                <a class="btn btn-warning" asp-controller="Cart" asp-action="Buy" asp-route-id="@Model.ProductId">Thêm vào giỏ hàng</a>
             </div>
             <div class="col-sm-6">
-                <a class="btn btn-success" asp-controller="" asp-action="">Thanh toán</a>
+                <a class="btn btn-success" asp-controller="Cart" asp-action="Buy" asp-route-id="@Model.ProductId">Thanh toán</a>
             </div>
         </dl>
     </div>
+</div>
+
+<br/>
+<h3>Bình luận</h3>
+<br />
+<div class="row">
+    <form asp-action="Comment" asp-controller="Detail" method="post">
+        <input name="ProductId" value="@Model.ProductId" hidden/>
+        <textarea name="Content" rows="3" cols="100"></textarea>
+
+        <button type="submit" class="btn">Gửi</button>
+    </form>
+
+</div>
+
+<br />
+<div class="row">
+    @foreach (var comment in Model.Comments)
+    {
+        <div class="col-12 comment-item">
+            <div class="row">
+                <div class="col-4">@comment.User.FirstName @comment.User.LastName (@comment.CreatedAt)</div>
+                <div class="col-8">: @comment.Content</div>
+            </div>
+        </div>
+    }
 </div>
