--- a/Views/Shared/_LayoutTheme.cshtml
+++ b/Views/Shared/_LayoutTheme.cshtml
@@ -106,8 +106,8 @@
                     <div id="kt_aside_menu" class="aside-menu my-4" data-menu-vertical="1" data-menu-scroll="1" data-menu-dropdown-timeout="500">
                         <!--begin::Menu Nav-->
                         <ul class="menu-nav">
-                            <li class="menu-item" aria-haspopup="true">
-                                <a href="index.html" class="menu-link">
+                            <li class="menu-item" aria-haspopup="true" id="menu-item-dashboard">
+                                <a asp-controller="Dashboard" asp-action="Index" class="menu-link">
                                     <span class="svg-icon menu-icon">
                                         <!--begin::Svg Icon | path:~/theme/assets/media/svg/icons/Design/Layers.svg-->
                                         <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="24px" height="24px" viewBox="0 0 24 24" version="1.1">
