--- a/Views/Home/SearchItem.cshtml
+++ b/Views/Home/SearchItem.cshtml
@@ -6,32 +6,40 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-    <h3>Kết quả tìm kiếm của bạn : </h3>
+<h3>Kết quả tìm kiếm của bạn : </h3>
 <br />
 
-<div class="col-lg-3 col-md-6 mb-4">
+@if (Model != null)
+{
+    <div class="col-lg-3 col-md-6 mb-4">
 
-    <div class="card h-100">
-        <div class="card-img-top">
-            <div class="img">
-                <img src="~/image/@Html.DisplayFor(m => m.ProductImage)" alt="" />
-                <div class="txt">
-                    <a href="#"><h3 style="color:aliceblue">MUA NGAY</h3></a>
-                    <a asp-controller="Detail" asp-action="Index" asp-route-id="@Html.DisplayFor(m=>m.ProductId)" asp-route-name="@Html.DisplayFor(m=>m.ProductName)"><h3 style="color:aliceblue">XEM CHI TIẾT</h3></a>
+        <div class="card h-100">
+            <div class="card-img-top">
+                <div class="img">
+                    <img src="@Model.ProductImage" alt="">
+                    <div class="txt">
+                        <a asp-controller="Cart" asp-action="Buy" asp-route-id="@Model.ProductId"><h3 style="color:aliceblue">MUA NGAY</h3></a>
+                        <a asp-controller="Detail" asp-action="Index" asp-route-id="@Model.ProductId" asp-route-name="@Model.ProductName"><h3 style="color:aliceblue">XEM CHI TIẾT</h3></a>
+                    </div>
                 </div>
             </div>
-        </div>
-        <div class="card-body">
-            <h4 class="card-title">@Html.DisplayFor(m => m.ProductName) </h4>
-            <p style="font-size: 20px;color: sandybrown" class="card-text">@Html.DisplayFor(m => m.ProductPrice)&nbsp; đ </p>
+            <div class="card-body">
+                <h4 class="card-title">@Model.ProductName </h4>
+                <p style="        font-size: 20px;color: sandybrown" class="card-text">@Model.ProductPrice&nbsp; đ &nbsp;&nbsp;<img src="~/image/hot-icon-1-1.gif" style="width: 45px; height: 30px" /></p>
+            </div>
         </div>
     </div>
-</div>
+}
+
+else
+{
+    <div>Không tìm thấy sản phẩm</div>
+}
 
 @*giao dien cua cart item*@
 
 <style>
-   
+
     .img {
         position: relative;
         overflow: hidden;
